# rust-dinff

./: Cargo.toml  README.md
src/: argc.rs  main.rs
