[package]
name = "dinff"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENCE"
]
homepage = "https://github.com/TonceanRaul/rust-dinff"
description = "Simple command line to get directory information"
repository = "https://github.com/TonceanRaul/rust-dinff"
categories = ["command-line-interface"]
license = "MIT"
keywords = [
    "cli",
    "directory"
]

[lints.rust]
unsafe_code = "forbid"


[dependencies]
thiserror = "2.0.10"
clap = "2"
walkdir = "2.5.0"
file-size = "1.0.3"
